--- a/funding.html
+++ b/funding.html
@@ -62,7 +62,8 @@ $(function($){
 	</ol>
 			
 	<h5>民間財団研究助成・寄付金</h5>
-	<ol><li><共同研究者(研究分担者)>,公益財団法人電気通信普及財団,学習者の学習癖に応じた学習介入型eラーニングシステムの開発と評価,2018</li>
+	<ol><li><代表,公益財団法人電気通信普及財団 研究調査助成 2021年度,オンラインと対面を横断するハイブリット型グループ学習支援に関する基盤技術の開発,2022から2023</li><!-- /#2022から2023 -->
+	<li><共同研究者(研究分担者)>,公益財団法人電気通信普及財団,学習者の学習癖に応じた学習介入型eラーニングシステムの開発と評価,2018</li>
 	<li>公益財団法人日本科学協会平成29年度笹川科学研究助成,音声によるグループエモーションが与える創発的なアイデア予測に関する探索的な研究,公益財団法人日本科学協会,2016</li>
 	<li>公益財団法人堀科学芸術振興財団の研究助成金第2部情報科学,複雑多重ネットワークによる学習者推定モデルの提案と授業との比較分析,公益財団法人堀科学芸術振興財団,2015</li></ol>
 	<h5>学内競争的資金</h5>
