--- a/achievement.html
+++ b/achievement.html
@@ -69,7 +69,14 @@ $(function($){
 			
 	<h5>査読付き原著論文</h5>
     <ol>
-	<li>Shun Okuhara, Takayuki Ito, “Compromising Strategies for Agents in Multiple Interdependent Issues”, IEICE Transactions on Communications（D）Vol.J103-D,No.4,2020.4
+	<li>廣瀬 伸行, 白松 俊, 奥原 俊, 自己調整学習における自動足場はずしのための計画と振り返りの自動評価手法の開発, 情報処理学会論文誌　デジタルプラクティス　Vol.4 No.2, pp9–25,2023</li>
+	<li>Ryo Sugawara, Shun Okuhara, Practice of group learning using active-learning methods in online lessons, International Journal of Learning Technology, 2023</li>
+	<li>Ryo Sugawara, Shun Okuhara, Group work using active-learning – A comparison of students’ evaluations of face-to-face to online lessons, International Journal of Virtual and Personal Learning Environments　　12(1) IF:1.288</li>		
+	<li>Shun Okuhara, Rafik Hadfi, Takayuki Ito, Investigating shame and selfishness in two-stage choice problems with interdependent alternatives, Journal of Intelligent Informatics and Smart Technology,2022</li>
+	<li>Ryo Sugawara, Shun Okuhara, Yoshikazu Sato, Study about the Aptitude-treatment interaction　 between learning using the e-learning system and learning type of learner, International Journal of Information and Education Technology, 10(7)　pp.488-493</li>
+	<li>Natsuki Matsunami, Shun Okuhara, Takayuki Ito, Learning Teamwork Based on Leader’s Instructions and Coercion in the Continuous Space Pursuit Problem,Transactions of the Japanese Society for Artificial Intelligence 36(5) E-K62_1,2021,9</li>
+	<li>松波 夏樹, 奥原 俊, 伊藤 孝行, 連続空間の追跡問題におけるLeader 指示とLeader強制力に基づくチームワークの学習,人工知能学会論文誌 36 巻, p. E-K62_1-10, 5 号, p. E-K62_1-10, 2021</li>
+	<li>Shun Okuhara, Takayuki Ito, “Compromising Strategies for Agents in Multiple Interdependent Issues”, IEICE Transactions on Communications（D）Vol.J103-D,No.4,2020.4</li>
 	<li>奥原俊，濱田大槻，伊藤孝行，アーメッド&ensp;ムスタファ，”過去交渉情報を元にK-近傍法を用いた自動交渉エージェントの試作”，情報処理学会論文誌，Vol.60,No.10,pp.1662-1671,2019.10.15</li>
 	<li>奥原俊，田中雅章，武藤晃一，鈴木浩子，菅原良，伊藤孝行，”グループ学習における音声情報を用いた求人用語学習支援システムの試作”，コンピュータ＆エデュケーションVol.46，pp.46-51,2019.6.1</li> 
 	<li>奥原俊，菅原良，伊藤孝行，”グループ学習における議論内容把握システムを用いた発話内容の評価に関する研究”，コンピュータ＆エデュケーションVol.42，pp.37-42,2017.6.1</li>
